--- a/templates/index_video.html
+++ b/templates/index_video.html
@@ -45,6 +45,7 @@ $('#fileupload').fileupload({
 });
 $(function () {
     $('#fileupload').fileupload({
+//        maxChunkSize: 1000000000,
         dataType: 'json',
         add: function (e, data) {
             data.context = $('<button/>').text('Upload')
