--- a/templates/base.html
+++ b/templates/base.html
@@ -8,7 +8,7 @@
 <link rel="icon" href="{{ url_for('static', filename='favicon.ico') }}" type="image/x-icon">
 
 <!-- Generic page styles -->
-<link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
+<link rel="stylesheet" href="static/css/style.css">
 
 <!-- blueimp Gallery styles -->
 <!--<link rel="stylesheet" href="http://blueimp.github.io/Gallery/css/blueimp-gallery.min.css">-->
@@ -38,7 +38,11 @@
             <ul class="nav navbar-nav">
                 <li><a href="/label">Annotate</a></li>
             </ul>
+            <ul class="nav navbar-nav nav-logout">
+                <li><a href="/logout">Logout</a></li>
+            </ul>
         </div>
+
     </div>
 </div>
 {% endblock %}
