add classifier page

--- a/templates/base.html
+++ b/templates/base.html
@@ -39,10 +39,10 @@
         </div>
         <div class="navbar-collapse collapse">
             <ul class="nav navbar-nav">
-                <li><a href="/">Video Management</a></li>
+                <li><a href="/video/list">Video Management</a></li>
             </ul>
             <ul class="nav navbar-nav">
-                <li><a href="/label">Annotate</a></li>
+                <li><a href="/classifier/list">Classifier Management</a></li>
             </ul>
             <ul class="nav navbar-nav nav-logout">
                 <li><a href="/logout">Logout</a></li>
