--- a/templates/base.html
+++ b/templates/base.html
@@ -8,9 +8,10 @@
 <link rel="icon" href="{{ url_for('static', filename='favicon.ico') }}" type="image/x-icon">
 
 <!-- Generic page styles -->
-<link rel="stylesheet" href="static/css/style.css">
+<link rel="stylesheet" href="static/css/semantic.css">
 
 <script src="static/js/jquery-3.1.0.min.js"></script>
+<script src="static/js/semantic.js"></script>
 <!-- blueimp Gallery styles -->
 <!--<link rel="stylesheet" href="http://blueimp.github.io/Gallery/css/blueimp-gallery.min.css">-->
 <link rel="stylesheet" href="//blueimp.github.io/Gallery/css/blueimp-gallery.min.css">
