--- a/static/css/classifier_page.css
+++ b/static/css/classifier_page.css
@@ -43,3 +43,9 @@ h5{
     width:200px;
     margin-top: 10px;
 }
+
+#holder_create_classifier{
+    border:1px solid #cecece;
+    padding: 20px;
+    border-radius: 20px;
+}
