--- a/templates/index_video.html
+++ b/templates/index_video.html
@@ -7,137 +7,141 @@
 
     <table class="table table_video">
         <thead>
-            <tr>
-                <th  class="table_center">Video Name</th>
-                <th  class="table_center">Labels</th>
-                <th  class="table_center">Add Label</th>
-                <th  class="table_center">Labeling Jobs</th>
-                <th  class="table_center">Delete Video</th>
-                <th  class="table_center">Download Video</th>
-            </tr>
+        <tr>
+            <th class="table_center">Video Name</th>
+            <th class="table_center">Labels</th>
+            <th class="table_center">Labeling Jobs</th>
+            <th class="table_center">Delete Video</th>
+            <th class="table_center">Download Video</th>
+        </tr>
         </thead>
         <tbody>
         {% for video in videos %}
-             <tr>
-                <th class="table_center">{{video.name}}</th>
-                <th >
-                    <ul class="list_labels">
+        <tr>
+            <th class="table_center">{{video.name}}</th>
+            <th>
+                <form action="../label/add" method="POST" class="form-inline add_label_form">
+                    <input hidden name="video_id" value="{{video.id}}">
+                    <div class="form-group">
+                        <input type="text" name="label_name" class="form-control input-sm input_label_add">
+                    </div>
+                    <button class="btn btn-primary btn-sm label_add" type="submit">Add label</button>
+                </form>
+                <ul class="list_labels">
                     {% for label in video.labels %}
-                        <li class="item_label">
+                    <li class="item_label">
+                        <div class="item_label_headline">
                             <p class="item_label_name">{{label.name}}</p>
-                            <p class="item_label_frame_count"> Labeled Frame Count: {{label.labeled_frame}} (duplicates possible)</p>
-                             <form class="item_label_form item_label_form_edit form-inline" action="../label/edit" method="POST">
+                            <form class="item_label_form form-inline item_label_form_delete" action="../label/delete"
+                                  method="POST">
                                 <input hidden name="label_id" value="{{label.id}}">
-                                <div class="form-group">
-                                    <input id="label_name" placeholder="Rename by type in name and 'Enter'" type="text" name="label_name" class="form-control label_edit"><br>
-                                </div>
-                                 <button class="btn btn-primary label_edit_button" type="submit">Edit label</button>
+                                <button class="btn btn-danger btn-xs" type="submit">Delete label</button>
                             </form>
-
-                            <form class="item_label_form form-inline item_label_form_delete" action="../label/delete" method="POST">
-                                <input hidden name="label_id" value="{{label.id}}">
-                                <button class="btn btn-danger" type="submit">Delete label</button>
-                            </form>
-                        </li>
-                    {% endfor%}
-                    </ul>
-                </th>
-                <th  class="table_center">
-                     <form action="../label/add" method="POST" class="form-inline add_label_form">
-                        <input hidden name="video_id" value="{{video.id}}">
-                        <div class="form-group">
-                            <input type="text" name="label_name" class="form-control input_label_add">
                         </div>
-                        <button class="btn btn-primary label_add" type="submit">Add label</button>
-                    </form>
 
-                </th>
-                <th  class="table_center">
+                        <p class="item_label_frame_count"> Labeled Frame Count: {{label.labeled_frame}} (duplicates
+                            possible)</p>
+                        <form class="item_label_form item_label_form_edit form-inline" action="../label/edit"
+                              method="POST">
+                            <input hidden name="label_id" value="{{label.id}}">
+                            <div class="form-group">
+                                <input id="label_name" placeholder="Rename by type in name and 'Enter'" type="text"
+                                       name="label_name" class="form-control label_edit"><br>
+                            </div>
+                            <button class="btn btn-primary label_edit_button" type="submit">Edit label</button>
+                        </form>
 
-                    <ul class="list_jobs">
-                     {% for url_obj in video.job_urls %}
-                        <li >
-                            <a href="{{url_obj.url}}">Click to Start Labeling Job {{url_obj.index}}</a>
-                        </li>
+                    </li>
                     {% endfor%}
-                    </ul>
+                </ul>
 
-                </th>
-                <th  class="table_center">
-                 <form class="item_delete_video" action="delete" method="POST">
-                      <input hidden name="video_id" value="{{video.id}}">
-                      <button class="btn btn-danger" type="submit">Delete Video</button>
-                 </form>
-                </th>
-                <th  class="table_center">Download Video</th>
-            </tr>
+            </th>
+            <th class="table_center">
+
+                <ul class="list_jobs">
+                    {% for url_obj in video.job_urls %}
+                    <li>
+                        <a href="{{url_obj.url}}">Click to Start Labeling Job {{url_obj.index}}</a>
+                    </li>
+                    {% endfor%}
+                </ul>
+
+            </th>
+            <th class="table_center">
+                <form class="item_delete_video" action="delete" method="POST">
+                    <input hidden name="video_id" value="{{video.id}}">
+                    <button class="btn btn-danger" type="submit">Delete Video</button>
+                </form>
+            </th>
+            <th class="table_center">Download Video</th>
+        </tr>
         {% endfor%}
         </tbody>
     </table>
 
     <!--<h3> Videos:</h3>-->
     <!--<ul id="list_video" class="list-group">-->
-        <!--{% for video in videos %}-->
-        <!--<li class="list-group-item">-->
-            <!--<div class="item_video">-->
-                <!--<h4 class="text_video_name"> {{video.name}}</h4>-->
+    <!--{% for video in videos %}-->
+    <!--<li class="list-group-item">-->
+    <!--<div class="item_video">-->
+    <!--<h4 class="text_video_name"> {{video.name}}</h4>-->
 
-                <!--<div class="item_video_info">-->
-                    <!--<h5> Labels:</h5>-->
-                    <!--<ul class="list_labels list-group">-->
-                    <!--{% for label in video.labels %}-->
-                        <!--<li class="item_label list-group-item">-->
-                            <!--<p class="item_label_name"> Name: {{label.name}}</p>-->
-                            <!--<p class="item_label_frame_count"> Labeled Frame Count: {{label.labeled_frame}} (duplicates possible)</p>-->
-                             <!--<form class="item_label_form item_label_form_edit form-inline" action="../label/edit" method="POST">-->
-                                <!--<input hidden name="label_id" value="{{label.id}}">-->
-                                <!--<div class="form-group">-->
-                                    <!--<input id="label_name" placeholder="Rename by type in name and 'Enter'" type="text" name="label_name" class="form-control label_edit"><br>-->
-                                <!--</div>-->
-                                 <!--<button class="btn btn-primary label_edit_button" type="submit">Edit label</button>-->
-                            <!--</form>-->
+    <!--<div class="item_video_info">-->
+    <!--<h5> Labels:</h5>-->
+    <!--<ul class="list_labels list-group">-->
+    <!--{% for label in video.labels %}-->
+    <!--<li class="item_label list-group-item">-->
+    <!--<p class="item_label_name"> Name: {{label.name}}</p>-->
+    <!--<p class="item_label_frame_count"> Labeled Frame Count: {{label.labeled_frame}} (duplicates possible)</p>-->
+    <!--<form class="item_label_form item_label_form_edit form-inline" action="../label/edit" method="POST">-->
+    <!--<input hidden name="label_id" value="{{label.id}}">-->
+    <!--<div class="form-group">-->
+    <!--<input id="label_name" placeholder="Rename by type in name and 'Enter'" type="text" name="label_name" class="form-control label_edit"><br>-->
+    <!--</div>-->
+    <!--<button class="btn btn-primary label_edit_button" type="submit">Edit label</button>-->
+    <!--</form>-->
 
-                            <!--<form class="item_label_form form-inline item_label_form_delete" action="../label/delete" method="POST">-->
-                                <!--<input hidden name="label_id" value="{{label.id}}">-->
-                                <!--<button class="btn btn-danger" type="submit">Delete label</button>-->
-                            <!--</form>-->
-                        <!--</li>-->
-                    <!--{% endfor%}-->
-                    <!--</ul>-->
-                    <!--<h5> Add Labels:</h5>-->
-                    <!--<form action="../label/add" method="POST" class="form-inline add_label_form">-->
-                        <!--<input hidden name="video_id" value="{{video.id}}">-->
-                        <!--<div class="form-group">-->
-                            <!--<label >Label Name:</label>-->
-                            <!--<input type="text" name="label_name" class="form-control">-->
-                        <!--</div>-->
-                        <!--<button class="btn btn-primary" type="submit">Add label</button>-->
-                    <!--</form>-->
+    <!--<form class="item_label_form form-inline item_label_form_delete" action="../label/delete" method="POST">-->
+    <!--<input hidden name="label_id" value="{{label.id}}">-->
+    <!--<button class="btn btn-danger" type="submit">Delete label</button>-->
+    <!--</form>-->
+    <!--</li>-->
+    <!--{% endfor%}-->
+    <!--</ul>-->
+    <!--<h5> Add Labels:</h5>-->
+    <!--<form action="../label/add" method="POST" class="form-inline add_label_form">-->
+    <!--<input hidden name="video_id" value="{{video.id}}">-->
+    <!--<div class="form-group">-->
+    <!--<label >Label Name:</label>-->
+    <!--<input type="text" name="label_name" class="form-control">-->
+    <!--</div>-->
+    <!--<button class="btn btn-primary" type="submit">Add label</button>-->
+    <!--</form>-->
 
-                    <!--<h5> Jobs:</h5>-->
-                    <!--<ul class="list_jobs">-->
-                     <!--{% for url_obj in video.job_urls %}-->
-                        <!--<li >-->
-                            <!--<a href="{{url_obj.url}}">Click to Start Labeling Job {{url_obj.index}}</a>-->
-                        <!--</li>-->
-                    <!--{% endfor%}-->
-                    <!--</ul>-->
+    <!--<h5> Jobs:</h5>-->
+    <!--<ul class="list_jobs">-->
+    <!--{% for url_obj in video.job_urls %}-->
+    <!--<li >-->
+    <!--<a href="{{url_obj.url}}">Click to Start Labeling Job {{url_obj.index}}</a>-->
+    <!--</li>-->
+    <!--{% endfor%}-->
+    <!--</ul>-->
 
-                 <!--</div>-->
-                 <!--<form class="item_delete_video" action="delete" method="POST">-->
-                      <!--<input hidden name="video_id" value="{{video.id}}">-->
-                      <!--<button class="btn btn-danger" type="submit">Delete Video</button>-->
-                 <!--</form>-->
-            <!--</div>-->
-        <!--</li>-->
-        <!--{% endfor%}-->
+    <!--</div>-->
+    <!--<form class="item_delete_video" action="delete" method="POST">-->
+    <!--<input hidden name="video_id" value="{{video.id}}">-->
+    <!--<button class="btn btn-danger" type="submit">Delete Video</button>-->
+    <!--</form>-->
+    <!--</div>-->
+    <!--</li>-->
+    <!--{% endfor%}-->
     <!--</ul>-->
     <!--<br>-->
     <h4> Upload Video (mp4/avi/m4v) or Zipped Image Sequence (zip):</h4>
     <form id="fileupload" action="upload" method="POST" enctype="multipart/form-data" class="form-inline">
         <div class="form-group">
-        <label for="video_name">Video Name:</label>
-        <input id="video_name" type="text" name="video_name" class="form-control"><br>
+            <label for="video_name">Video Name:</label>
+            <input id="video_name" type="text" name="video_name" class="form-control"><br>
         </div>
         <div class="form-group">
             <label for="file_upload">Choose the file:</label>
@@ -160,74 +164,74 @@
 <script src="static/js/jquery.fileupload.js"></script>
 <script>
 
-$(".item_delete_video").submit(function(e){
-    e.preventDefault();
-    var form = this;
-    BootstrapDialog.confirm('Are you sure to delete this video? It will delete all related files, labels for this video', function(result){
-        if(result) {
-            form.submit()
-        }else {
-        }
+    $(".item_delete_video").submit(function (e) {
+        e.preventDefault();
+        var form = this;
+        BootstrapDialog.confirm('Are you sure to delete this video? It will delete all related files, labels for this video', function (result) {
+            if (result) {
+                form.submit()
+            } else {
+            }
+        });
     });
-});
 
-$(".item_label_form_delete").submit(function(e){
-    e.preventDefault();
-    var form = this;
-    BootstrapDialog.confirm('Are you sure to delete this label? It will delete all related files, labels for this label', function(result){
-        if(result) {
-            form.submit()
-        }else {
-        }
+    $(".item_label_form_delete").submit(function (e) {
+        e.preventDefault();
+        var form = this;
+        BootstrapDialog.confirm('Are you sure to delete this label? It will delete all related files, labels for this label', function (result) {
+            if (result) {
+                form.submit()
+            } else {
+            }
+        });
     });
-});
 
-$(function () {
-    $('#fileupload').fileupload({
-        done: function (e, data) {
-            $.each(data.result.files, function (index, file) {
-                $('<p/>').text(file.name).appendTo(document.body);
-            });
-        }
-    });
-});
-$('#fileupload').fileupload({
-    /* ... */
-    progressall: function (e, data) {
-        var progress = parseInt(data.loaded / data.total * 100, 10);
-        $('#progress .bar').css(
-            'width',
-            progress + '%'
-        );
-    }
-});
-$(function () {
-    $('#fileupload').fileupload({
-        add: function (e, data) {
-            data.context = $('<button class="btn btn-primary"/>').text('Upload')
-                .appendTo($('#upload'))
-                .click(function () {
-                    var permitted = true;
-
-                    //check file type, only mp4, avi, zip are allowed
-                    var uploadFile = data.files[0];
-                    if(!(/\.(zip|mp4|avi|m4v)$/i).test(uploadFile.name)){
-                        permitted = false;
-                        alert('file type not allowed, you can upload either video(mp4/avi) or zip file')
-                    }
-
-                    if(permitted){
-                        data.context = $('<p/>').text('Uploading...').replaceAll($(this));
-                        data.submit();
-                    }
+    $(function () {
+        $('#fileupload').fileupload({
+            done: function (e, data) {
+                $.each(data.result.files, function (index, file) {
+                    $('<p/>').text(file.name).appendTo(document.body);
                 });
-        },
-        done: function (e, data) {
-            data.context.text('Upload finished.');
-            location.reload()
+            }
+        });
+    });
+    $('#fileupload').fileupload({
+        /* ... */
+        progressall: function (e, data) {
+            var progress = parseInt(data.loaded / data.total * 100, 10);
+            $('#progress .bar').css(
+                    'width',
+                    progress + '%'
+            );
         }
     });
-});
+    $(function () {
+        $('#fileupload').fileupload({
+            add: function (e, data) {
+                data.context = $('<button class="btn btn-primary"/>').text('Upload')
+                        .appendTo($('#upload'))
+                        .click(function () {
+                            var permitted = true;
+
+                            //check file type, only mp4, avi, zip are allowed
+                            var uploadFile = data.files[0];
+                            if (!(/\.(zip|mp4|avi|m4v)$/i).test(uploadFile.name)) {
+                                permitted = false;
+                                alert('file type not allowed, you can upload either video(mp4/avi) or zip file')
+                            }
+
+                            if (permitted) {
+                                data.context = $('<p/>').text('Uploading...').replaceAll($(this));
+                                data.submit();
+                            }
+                        });
+            },
+            done: function (e, data) {
+                data.context.text('Upload finished.');
+                location.reload()
+            }
+        });
+    });
 </script>
 <![endif]-->
 {% endblock %}
